--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-block">
                     <header class="form-header">
-                        <h1 > Finan - Relatório Financeiro</h1>
+                        <h1 > Finan - Cadastros</h1>
                         <div class="divider"></div>
                         <p>Sua calculadora de remuneração em alguns clicks. Basta inserir os dados e fazemos todo o resto para você!</p>
                     </header>
