Adjusting Element HTML

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 					<div class="form-block">
 						<header class="form-header">
 							<h1>Finan - Cadastros</h1>
-							<div class="divider"></div>
 							<p>
 								Sua calculadora de remuneração em alguns clicks. Basta inserir
 								os dados e fazemos todo o resto para você!
@@ -54,7 +53,7 @@
 							/>
 							<div class="form-cta">
 								<button type="submit">Salvar</button>
-								<button><a href="#table">Ver Cadastros</a></button>
+								<a href="#table">Ver Cadastros</a>
 							</div>
 						</form>
 						<div id="content-form"></div>
@@ -82,7 +81,6 @@
 					<div class="table-block" id="table">
 						<header class="table-header">
 							<h1>Relatório Financeiro</h1>
-							<div class="divider"></div>
 						</header>
 						<table>
 							<thead>
